fix: TT-312 [UI] Calendar the section titles is not responsive

--- a/src/app/modules/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/modules/shared/components/sidebar/sidebar.component.scss
@@ -30,7 +30,7 @@ body {
   margin-left: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 883px) {
   #sidebar-wrapper {
     margin-left: 0;
   }
